3.3.1
* increased map startup cost.
* when you sleep you now get a message you're refreshed, meaning map droprate is high for you now.
* added a teleport back scroll, its craftable
* changed mob dmg from spell to atk dmg to attack element dmg in maps.
* fixed salvage outputs being stuck and not put into hoppers
* repair station is now automatable too
* fixed control not showing enchants

3.3.0

This is basically an economy update! I added new resource sinks, increased repair costs, reduced salvaged ores etc..
I also added a new way to gain ores, salvaging currencies! 
I'm trying to make it so there's no such thing as a useless item, and currencies before were useless if you didn't need them.
Map device now needs fuel to start maps (why was dimensional travel free before!?) and now you can find a dungeon merchant in dungeons to spend your extra ores on.
Oh and lots of items now need to be identified to be used. 
In short, prepare for scarcity!

The good thing is even if you hate the scarcity, i added some configs to let you control the costs of these resource sinks.

* try fix lightning strikes being heard from everyone on server
* confine random dungeons to world border as some mods might change it
* regen should now cost hunger same as vanilla regen did before
* health and magic shield no longer regen at low hunger.
* gear and runes now salvage for ore 1 rarity bellow, capped at common at the bottom.
* altered rarity drops
* fixed loot crates in maps having too high chance to drop maps.
* altered repair station fuel per ore rarity to be more in line with the actual craft value of the ores.
* casting spells now damages weapon
* reduced loot drops default config (needs server config clear)
* some currencies are now salvagable. (ones with crafting recipes) This should help balance economy a bit.
* updated chinese lang
* removed tinkering station. Added most currencies back as recipes. (i really thought the tinkering station would be more fun.. IT'S NOT. So it's gone)