@@ -4,7 +4,7 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 # Mod
-mod_version=3.3.0
+mod_version=3.3.1
 mod_group=com.robertx22
 mod_id=mmorpg
 mod_name=Mine and Slash
