@@ -16,7 +16,7 @@ public class ClientContainer {
 
     static {
         final Pair<ClientContainer, ForgeConfigSpec> specPair = new ForgeConfigSpec.Builder().configure(
-                ClientContainer::new);
+            ClientContainer::new);
         spec = specPair.getRight();
         INSTANCE = specPair.getLeft();
 
@@ -33,44 +33,55 @@ public class ClientContainer {
     public BooleanValue RENDER_SIMPLE_MOB_BAR;
     public ForgeConfigSpec.IntValue REMOVE_EMPTY_TOOLTIP_LINES_IF_MORE_THAN_X_LINES;
 
+    public ForgeConfigSpec.IntValue LEFT_VANILLA_LIKE_BARS_Y__POS_ADJUST;
+    public ForgeConfigSpec.IntValue RIGHT_VANILLA_LIKE_BARS_Y__POS_ADJUST;
+
     public EnumValue<PlayerGUIs> PLAYER_GUI_TYPE;
 
     ClientContainer(ForgeConfigSpec.Builder builder) {
-        builder.comment("Client Settings").push(NAME);
+        builder.comment("Client Settings")
+            .push(NAME);
 
-        neatConfig = builder.configure(NeatConfig::new).getLeft();
-        dmgParticleConfig = builder.configure(DmgParticleConfig::new).getLeft();
+        LEFT_VANILLA_LIKE_BARS_Y__POS_ADJUST = builder.comment(".")
+            .defineInRange("LEFT_VANILLA_LIKE_BARS_Y__POS_ADJUST", 0, -10000, 10000);
+        RIGHT_VANILLA_LIKE_BARS_Y__POS_ADJUST = builder.comment(".")
+            .defineInRange("RIGHT_VANILLA_LIKE_BARS_Y__POS_ADJUST", 0, -10000, 10000);
+
+        neatConfig = builder.configure(NeatConfig::new)
+            .getLeft();
+        dmgParticleConfig = builder.configure(DmgParticleConfig::new)
+            .getLeft();
 
         REMOVE_EMPTY_TOOLTIP_LINES_IF_MORE_THAN_X_LINES = builder.comment(".")
-                .defineInRange("REMOVE_EMPTY_TOOLTIP_LINES_IF_MORE_THAN_X_LINES", 35, 0, 1000);
+            .defineInRange("REMOVE_EMPTY_TOOLTIP_LINES_IF_MORE_THAN_X_LINES", 35, 0, 1000);
 
         RENDER_SIMPLE_MOB_BAR = builder.comment(".")
-                .translation("mmorpg.config.")
-                .define("RENDER_SIMPLE_MOB_BAR", true);
+            .translation("mmorpg.config.")
+            .define("RENDER_SIMPLE_MOB_BAR", true);
 
         SHOW_AFFIXED_NAME = builder.comment(".")
-                .translation("mmorpg.config.show_item_affixes")
-                .define("SHOW_AFFIXED_NAME", true);
+            .translation("mmorpg.config.show_item_affixes")
+            .define("SHOW_AFFIXED_NAME", true);
 
         SHOW_UNMET_GEAR_REQUIREMENTS_GUI = builder.comment(".")
-                .translation("mmorpg.config.")
-                .define("SHOW_UNMET_GEAR_REQUIREMENTS_GUI", true);
+            .translation("mmorpg.config.")
+            .define("SHOW_UNMET_GEAR_REQUIREMENTS_GUI", true);
 
         SHOW_VANILLA_HEARTS = builder.comment(".")
-                .translation("mmorpg.config.show_vanilla_hearts")
-                .define("SHOW_VANILLA_HEARTS", true);
+            .translation("mmorpg.config.show_vanilla_hearts")
+            .define("SHOW_VANILLA_HEARTS", true);
 
         RENDER_MOB_HEALTH_GUI = builder.comment(".")
-                .translation("mmorpg.config.mob_health_bar")
-                .define("RENDER_MOB_HEALTH_GUI", true);
+            .translation("mmorpg.config.mob_health_bar")
+            .define("RENDER_MOB_HEALTH_GUI", true);
 
         SHOW_LOW_ENERGY_MANA_WARNING = builder.comment(".")
-                .translation("mmorpg.config.low_resource_warnings")
-                .define("SHOW_LOW_ENERGY_MANA_WARNING", true);
+            .translation("mmorpg.config.low_resource_warnings")
+            .define("SHOW_LOW_ENERGY_MANA_WARNING", true);
 
         PLAYER_GUI_TYPE = builder.comment(".")
-                .translation("mmorpg.config.player_gui_overlay_type")
-                .defineEnum("PLAYER_GUI_TYPE", PlayerGUIs.Bottom_Middle_Corners);
+            .translation("mmorpg.config.player_gui_overlay_type")
+            .defineEnum("PLAYER_GUI_TYPE", PlayerGUIs.Bottom_Middle_Corners);
 
         builder.pop();
     }
