@@ -4,7 +4,7 @@ issueTrackerURL="https://github.com/RobertSkalko/Mine-and-Slash/issues"
 logoFile="logo.png"
 [[mods]]
 modId="mmorpg"
-version="3.3.0"
+version="3.3.1"
 displayName="Mine and Slash"
 displayURL="https://www.curseforge.com/minecraft/mc-mods/mine-and-slash-reloaded"
 authors="robertx22(main author), matpac(artist)"
